# XRD_fitter

./: pyproject.toml
src/xrd_fitter/: differntial_fitting.ipynb
