[project]
name = "xrd-fitter"
version = "0.1.0"
description = ""
authors = [
    {name = "ryk-spec",email = "watanabe.ryo.r45@kyoto-u.jp"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "lmfit (>=1.3.3,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
]

[tool.poetry]
packages = [{include = "xrd_fitter", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
